--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@illuxiza/nanostores-immer": "^0.1.0",
     "@yunyfi/lit-wc": "*",
     "lit": "^3.3.1",
     "nanostores": "^1.0.1"
