Adding configuration APIs to the web components and binding changes in that to their props in design mode

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "@illuxiza/nanostores-immer": "^0.1.0",
     "@yunyfi/lit-wc": "*",
     "lit": "^3.3.1",
-    "nanostores": "^1.0.1"
+    "nanostores": "^1.0.1",
+    "uuid": "^13.0.0"
   }
 }
